--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 html, body {
   margin: 0;
   padding: 0;
-  background-color: black;
+  background-color: rgb(50,50,50);
 }
 
 canvas {
   display: block;
+  margin: auto;
 }
